Fixed early terminate issue